<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>janus_ros2</name>
  <version>0.0.0</version>
  <description>Janus is an open source, general purpose WebRTC server designed and developed by Meetecho. This package provides a ROS 2 transport plugin.</description>
  <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
  <license>GPLv3</license>
  <author>Meetecho</author>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
